--- a/app/src/main/res/layout/services.xml
+++ b/app/src/main/res/layout/services.xml
@@ -9,44 +9,40 @@
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_weight="4"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
         <ImageView
-        android:layout_weight="1"
+
         android:id="@+id/iv_pic1"
         android:layout_width="match_parent"
+            android:layout_weight="8"
         android:background="@mipmap/ic_launcher"
-        android:layout_height="130dp"
+        android:layout_height="0dp"
         android:adjustViewBounds="true"
         />
-        </LinearLayout>
-        <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/gold"
-        >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Services"
-        android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:padding="3dp"
-        android:textSize="18dp"
-        android:id="@+id/txt_view_name_text4" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="Services"
+                android:gravity="center_vertical"
+                android:textStyle="bold"
+                android:layout_weight="2"
+                android:textColor="@color/gray"
+                android:padding="3dp"
+                android:textSize="18dp"
+                android:id="@+id/txt_view_name_text4" />
+
 </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:layout_weight="6">
 
-    <HorizontalScrollView
-        android:id="@+id/hsv"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:fillViewport="true"
-        android:measureAllChildren="false"
-      >
+
+
         <LinearLayout
             android:id="@+id/innerLay"
             android:layout_width="match_parent"
@@ -124,7 +120,7 @@
 
     </RadioGroup>
         </LinearLayout>
-    </HorizontalScrollView>
+
         <ScrollView
             android:layout_width="match_parent"
             android:id="@+id/sc_hair"
@@ -310,7 +306,7 @@
             <CheckBox android:id="@+id/chk_hair_Treatment"
 
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="13dp"
                 android:buttonTint="@color/gold"
                 android:button="@drawable/checkbox_selector"
@@ -323,7 +319,7 @@
                 android:text="Hair Treatment :"
                 android:layout_width="wrap_content"
                 android:padding="5dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal" />
 
             <TextView
@@ -332,14 +328,17 @@
                 android:text="- Rs "
                 android:layout_width="match_parent"
                 android:padding="5dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="end"
                 />
 
+        </LinearLayout>
 
         </LinearLayout>
-     </LinearLayout>
+
         </ScrollView>
+
+
 
         <ScrollView
             android:layout_width="match_parent"
@@ -814,7 +813,7 @@
 
                 <TextView
                     android:textColor="@color/gold"
-                    android:id="@+id/txt_spa1"
+                    android:id="@+id/txt_spa2"
                     android:text="1500 Rs :"
                     android:layout_width="match_parent"
                     android:padding="5dp"
@@ -848,7 +847,7 @@
 
                 <TextView
                     android:textColor="@color/gold"
-                    android:id="@+id/txt_spa2"
+                    android:id="@+id/txt_spa01"
                     android:text="Resort Spa :"
                     android:layout_width="wrap_content"
                     android:padding="5dp"
@@ -1024,12 +1023,56 @@
                     android:layout_height="match_parent"
                     android:gravity="end"/>
 
-
-
             </LinearLayout>
-        </LinearLayout>
-        </ScrollView>
 
+        </LinearLayout>
+
+        </ScrollView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:background="@color/gold"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Tasks"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+
+                android:textSize="18dp"
+                android:layout_weight="1"
+                android:id="@+id/txt_view_btn_task" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Total"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:padding="3dp"
+                android:textSize="18dp"
+                android:id="@+id/txt_view_btn_total" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Book now"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:padding="3dp"
+                android:textSize="18dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:id="@+id/txt_view_btn_book" />
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
 
