--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -51,6 +51,7 @@
        <EditText
             android:id="@+id/edt_login_mobilenumber"
             android:layout_width="match_parent"
+           android:inputType="number"
             android:padding="10dp"
             android:layout_margin="5dp"
             android:textColor="@color/gray"
